@@ -1,5 +1,7 @@
 - module: php_fpm
-  metricsets: ["pool"]
+  metricsets:
+  - pool
+  #- process
   enabled: true
   period: 10s
   status_path: "/status"
